# elogviewer

./: .ansible-lint  .dockerignore  .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  .yamllint.yml  ANSIBLE.md  CHANGELOG  Dockerfile  MANIFEST.in  Makefile  README.md  ansible.cfg  docker_gentoo  elogviewer-2.7.ebuild  elogviewer.1  elogviewer.py  justfile  pylintrc  pyproject.toml  requirements.in  setup.py  site.yml  tests.py
.github/: dependabot.yml
.github/actions/setup-ansible/: action.yml
.github/workflows/: ansible-test.yml  check-artefacts.yml  dependabot.yml  e2e.yml  lint.yml  main.yml  publish.yml  python-test.yml
bug_report/: README  _1  _2  _environment
elogviewer/: __init__.py  __main__.py  eclass.py  elog.py  uimodel.py  uiview.py
inventory/: hosts.yml
inventory/group_vars/: all.yml
molecule/e2e/: converge.yml  molecule.yml  prepare.yml  verify.yml
roles/gentoo_base/defaults/: main.yml
roles/gentoo_base/molecule/default/: converge_make_conf.yml  converge_package_use.yml  verify_make_conf.yml  verify_package_use.yml
roles/gentoo_base/tasks/: main.yml  makeconf.yml  package_use.yml  reposconf.yml
roles/gentoo_base/templates/: make_conf_base.j2  package_use.j2
roles/gentoo_deploy/tasks/: main.yml
roles/gentoo_desktop/tasks/: dbus.yml  openbox.yml  packages.yml
roles/gentoo_download_cache/tasks/: main.yml
roles/gentoo_packages/tasks/: main.yml
roles/gentoo_pkgcache/defaults/: main.yml
roles/gentoo_pkgcache/tasks/: sync.yml
roles/gentoo_system/defaults/: main.yml
roles/gentoo_system/molecule/default/: converge.yml  verify.yml
roles/gentoo_system/tasks/: download_cache.yml  main.yml  report_cache_hits.yml  update_system.yml  update_world.yml
roles/gentoo_upload_cache/tasks/: main.yml
roles/gentoo_user/tasks/: path.yml
roles/gentoo_virtualbox/tasks/: main.yml
scripts/: check-artefacts  check-artefacts.cpan  check-artefacts.yml
src/elogviewer/: __init__.py  __main__.py  __version__.py  elog.py  model.py  parser.py  uicontroller.py  uimodel.py  uiview.py
test_plugins/: gentoo_test.py
tests/: elog.py  fuzz.py  test_arch.py  test_elogviewer.py
typings/portage/: __init__.pyi
vagrant/: Makefile  Vagrantfile  ansible.yml  make_conf.j2
vm/: .ansible-lint  Makefile  README.md  Vagrantfile  ansible.cfg  ansible.yml  e2e.yml  justfile  make_conf.j2  site.yml
vm/inventory/: hosts.yml
vm/inventory/group_vars/: all.yml
vm/molecule/e2e/: converge.yml  molecule.yml  verify.yml
vm/molecule/e2e/group_vars/: all.yml
vm/roles/gentoo_base/defaults/: main.yml
vm/roles/gentoo_base/molecule/default/: converge.yml  converge_make_conf.yml  converge_package_use.yml  molecule.yml  verify.yml  verify_make_conf.yml
vm/roles/gentoo_base/tasks/: cache.yml  locale.yml  main.yml  makeconf.yml  makeconf_python.yml
vm/roles/gentoo_base/templates/: make_conf.j2  make_conf_base.j2
vm/roles/gentoo_deploy/tasks/: dist.yml  main.yml  sync_dist.yml
vm/roles/gentoo_desktop/tasks/: dbus.yml  main.yml  packages.yml
vm/roles/gentoo_system/defaults/: main.yml
vm/roles/gentoo_system/molecule/default/: verify.yml
vm/roles/gentoo_system/tasks/: download_cache.yml  install.yml  main.yml  update_system.yml  update_world.yml  upload_cache.yml
vm/roles/gentoo_system/templates/: make_conf_python_targets.j2
vm/roles/gentoo_user/tasks/: main.yml  path.yml  sudoers.yml  users.yml
vm/roles/gentoo_virtualbox/tasks/: main.yml
