[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=9.2"]
build-backend = "setuptools.build_meta"

[project]
name = "elogviewer"
description = "An elog viewer for Gentoo Linux"
dynamic = ["version", "readme"]
authors = [
    {name = "Mathias Laurin", email = "Mathias.Laurin+gentoo.org@gmail.com"}
]
license = "GPL-2.0-only"
license-files = ["LICENSE*"]
urls = {source = "https://github.com/Synss/elogviewer"}
gui-scripts = {elogviewer = "elogviewer:main"}
dependencies = ["portage", "PyQt6"]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Environment :: X11 Applications :: Qt",
]

[project.optional-dependencies]
just = ["rust-just"]
lint = ["ansible-lint", "ruff", "ty", "yamllint"]
test = ["pyfakefs", "pytest", "pytest-qt"]
vm = ["ansible", "molecule", "molecule-docker", "passlib"]

[tool.setuptools]
include-package-data = true  # MANIFEST.in
py-modules = ["elogviewer"]

[tool.setuptools.dynamic]
readme = {file = "README.md"}

[tool.setuptools_scm]
