[build-system]
build-backend = 'hatchling.build'
requires = ['hatchling']

[project]
name = "elogviewer"
dynamic = ["version"]
description = "An elog viewer for Gentoo Linux"
authors = [
    {name = "Mathias Laurin", email = "Mathias.Laurin+gentoo.org@gmail.com"}
]
license = "GPL-2.0-only"
license-files = ["LICENSE.TXT"]
readme = {"file" = "README.md", "content-type" = "text/markdown"}
urls = {source = "https://github.com/Synss/elogviewer"}
gui-scripts = {elogviewer = "elogviewer:main"}
dependencies = ["portage", "PyQt6"]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Environment :: X11 Applications :: Qt",
]

[project.optional-dependencies]
just = ["rust-just"]
lint = ["ansible-lint", "pre-commit", "ruff", "ty", "yamllint", "zizmor"]
test = ["pyfakefs", "pytest", "pytest-qt"]
vm = ["ansible", "molecule", "molecule-docker", "passlib"]

[tool.hatch.version]
path = "src/elogviewer/__version__.py"

[tool.hatch.build.targets.sdist]
exclude = [
    ".*",
    "/build/",
]
include = [
    "/man/",
    "/src/elogviewer/",
    "/tests/",
    "README.md",
]

[tool.hatch.build.targets.wheel]
packages = [
    "/man/",
    "/src/elogviewer/",
    "/tests/",
    "README.md",
]
