[build-system]
build-backend = 'hatchling.build'
requires = ['hatchling']

[project]
name = "elogviewer"
dynamic = ["version"]
description = "An elog viewer for Gentoo Linux"
authors = [
    {name = "Mathias Laurin", email = "Mathias.Laurin+gentoo.org@gmail.com"}
]
license = "GPL-2.0-only"
license-files = ["LICENSE.TXT"]
readme = {"file" = "README.md", "content-type" = "text/markdown"}
urls = {source = "https://github.com/Synss/elogviewer"}
gui-scripts = {elogviewer = "elogviewer:main"}
dependencies = ["portage", "PyQt6"]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Environment :: X11 Applications :: Qt",
]

[dependency-groups]
dev = [
    "check-wheel-contents",
    "pyfakefs",
    "pre-commit",
    "pytest",
    "pytest-qt",
    "pyqt6-stubs>=20250824",
    "ruff",
    "rust-just",
    "basedpyright",
    "zizmor",
]
vm = ["ansible", "ansible-lint", "molecule", "molecule-docker", "passlib", "yamllint"]

[tool.check-artefacts]
required = ["elogviewer.1", "README.md", "LICENSE.TXT", "py.typed"]
forbidden = ["uv.lock", "dist/", "build/", "inventory/", "junit/", "role/"]

[tool.basedpyright]
pythonPlatform = "Linux"
pythonVersion = "3.12"

reportAny = "none"
reportArgumentType = "none"
reportAttributeAccessIssue = "none"
reportExplicitAny = "none"
reportMissingTypeStubs = "none"
reportOptionalMemberAccess = "none"
reportPossiblyUnboundVariable = "none"
reportUnannotatedClassAttribute = "none"
reportUnknownArgumentType = "none"
reportUnusedCallResult = "none"
reportUnknownLambdaType = "none"
reportUnknownMemberType = "none"
reportUnusedParameter = "none"
reportUnknownVariableType = "none"

[tool.check-wheel-contents]
toplevel = "elogviewer/"
src_dir = "src/"

[tool.hatch.version]
path = "src/elogviewer/__version__.py"

[tool.hatch.build.targets.sdist]
exclude = [
    ".*",
    "/build/",
]
include = [
    "/man/",
    "/src/elogviewer/",
    "/tests/",
    "README.md",
]
